--- a/.github/workflows/prod.yml
+++ b/.github/workflows/prod.yml
@@ -1,31 +1,49 @@
-name: Deploy to Multiple Environments
+name: CI/CD Echo Pipeline
 
 on:
   push:
     branches:
       - master
+      - staging
 
 jobs:
-  deploy-staging:
+  build:
+    name: Build
     runs-on: ubuntu-latest
+    steps:
+      - name: Checkout Code
+        run: echo "Checking out code..."
+      - name: Build Application
+        run: echo "Building application..."
+
+  test:
+    name: Test
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+      - name: Run Tests
+        run: echo "Running tests..."
+
+  deploy_staging:
+    name: Deploy to Staging
+    runs-on: ubuntu-latest
+    needs: test
+    if: github.ref == 'refs/heads/staging'
     environment:
       name: dev
       url: https://staging.example.com
     steps:
-      - name: Checkout Code
-        uses: actions/checkout@v3
-
       - name: Deploy to Staging
-        run: echo "Deploying to the staging environment..."
+        run: echo "Deploying to staging environment..."
 
-  deploy-production:
+  deploy_production:
+    name: Deploy to Production
     runs-on: ubuntu-latest
+    needs: test
+    if: github.ref == 'refs/heads/master'
     environment:
       name: prod
       url: https://production.example.com
     steps:
-      - name: Checkout Code
-        uses: actions/checkout@v3
-
       - name: Deploy to Production
-        run: echo "Deploying to the production environment..."
+        run: echo "Deploying to production environment..."
