--- a/.github/workflows/prod.yml
+++ b/.github/workflows/prod.yml
@@ -16,34 +16,56 @@ jobs:
       - name: Build Application
         run: echo "Building application..."
 
-  test:
-    name: Test
+  unit_tests:
+    name: Unit Tests
     runs-on: ubuntu-latest
     needs: build
     steps:
-      - name: Run Tests
-        run: echo "Running tests..."
+      - name: Run Unit Tests
+        run: echo "Running unit tests..."
 
-  deploy_staging:
-    name: Deploy to Staging
+  bdd_tests:
+    name: BDD Tests
     runs-on: ubuntu-latest
-    needs: test
-    if: github.ref == 'refs/heads/staging'
+    needs: build
+    steps:
+      - name: Run BDD Tests
+        run: echo "Running BDD tests..."
+
+  security_tests:
+    name: Security Tests
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+      - name: Run Security Tests
+        run: echo "Running security tests..."
+
+  deploy_dev:
+    name: Deploy to Dev
+    runs-on: ubuntu-latest
+    needs:
+      - unit_tests
+      - bdd_tests
+      - security_tests
+    if: github.ref == 'refs/heads/dev'
     environment:
       name: dev
-      url: https://staging.example.com
+      url: https://dev.example.com
     steps:
-      - name: Deploy to Staging
-        run: echo "Deploying to staging environment..."
+      - name: Deploy to Dev
+        run: echo "Deploying to Dev environment..."
 
   deploy_production:
     name: Deploy to Production
     runs-on: ubuntu-latest
-    needs: test
+    needs:
+      - unit_tests
+      - bdd_tests
+      - security_tests
     if: github.ref == 'refs/heads/master'
     environment:
       name: prod
       url: https://production.example.com
     steps:
       - name: Deploy to Production
-        run: echo "Deploying to production environment..."
+        run: echo "Deploying to Production environment..."
